# csv-analyze

./: .gitignore  README.md  REQUIREMENTS.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  security.yml
config/: default.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  utils.rs
src/components/: DataTable.tsx  FileUploader.tsx  QueryBuilder.tsx  SqlEditor.tsx
src/components/__tests__/: FileUploader.test.tsx
src/hooks/: useDataStore.ts  useDuckDB.ts
src/test/: setup.ts
src/types/: index.ts
