[package]
name = "csv-analyzer"
version = "0.1.0"
description = "A standalone CSV analysis tool"
authors = ["Your Name <you@example.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["dialog-open", "dialog-save", "fs-read-dir", "fs-read-file", "fs-write-file", "path-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time", "json"] }
csv = "1.3"
encoding_rs = "0.8"
calamine = "0.29"
arrow = "56"
parquet = "56"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
uuid = { version = "1.11", features = ["v4", "serde"] }
anyhow = "1.0"
base64 = "0.22"
num_cpus = "1.16"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]